--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "algolia-firebase-extension",
+  "version": "0.0.1",
+  "description": "",
+  "license": "Apache-2.0",
+  "scripts": {
+    "emulator:ext:start": "firebase ext:dev:emulators:start --import=data --test-params=test-params.env"
+  },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
