--- a/extension.yaml
+++ b/extension.yaml
@@ -1,16 +1,16 @@
 # Learn detailed information about the fields of an extension.yaml file in the docs:
 # https://firebase.google.com/docs/extensions/alpha/ref-extension-yaml
 
-name: algolia-firebase-extension  # Identifier for your extension
+name: firestore-algolia-search  # Identifier for your extension
 version: 0.0.1  # Follow semver versioning
 specVersion: v1beta  # Version of the Firebase Extensions specification
 
 # Friendly display name for your extension (~3-5 words)
-displayName: Algolia Firebase Extension
+displayName: Search with Algolia
 
 # Brief description of the task your extension performs (~1 sentence)
 description: >-
-  The Algolia Firebase Extension indexes your Firestore collection into Algolia.
+  Enable full text search of your Cloud Firestore data with Algolia.
 
 license: Apache-2.0  # https://spdx.org/licenses/
 
@@ -39,9 +39,10 @@ resources:
       # LOCATION is a user-configured parameter value specified by the user
       # during installation.
       location: ${LOCATION}
+      runtime: nodejs10
       eventTrigger:
         eventType: providers/cloud.firestore/eventTypes/document.write
-        resource: projects/${PROJECT_ID}/databases/(default)/documents/${COLLECTION_PATH}/{documentID}    
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/${COLLECTION_PATH}/{documentID}
 
 # In the `params` field, set up your extension's user-configured parameters.
 # Learn more in the docs: https://firebase.google.com/docs/extensions/alpha/ref-extension-yaml#params-field
@@ -50,17 +51,17 @@ params:
     label: Collection path
     description: >
       Specify the Collection path to monitor for changes.
-    default: search
-    example: search
+    default: ''
+    example: movies
     required: true
-    
+
   - param: FIELDS
     label: Indexable Fields
     description: >
       A comma separated list of Cloud Firestore fields to index. Leave empty to index all fields.
     default: ''
     example: 'name,category,price,sales'
-    required: false  
+    required: false
 
   - param: ALGOLIA_INDEX_NAME
     label: Algolia Index Name
@@ -68,7 +69,7 @@ params:
       Specify the Algolia Index Name.
     type: string
     required: true
-    immutable: true  
+    immutable: true
 
   - param: ALGOLIA_APP_ID
     label: Algolia Application Id
@@ -76,7 +77,7 @@ params:
       Specify the Algolia Application Id.
     type: string
     required: true
-    immutable: true   
+    immutable: true
 
   - param: ALGOLIA_API_KEY
     label: Algolia API Key
@@ -84,7 +85,7 @@ params:
       Create a new API Key that has addObject, deleteObject, listIndexes, deleteIndex, editSettings, and settings, permissions.  Avoid using the Admin API key if all possible.
     type: string
     required: true
-    immutable: true  
+    immutable: true
 
   - param: LOCATION
     label: Cloud Functions location
