--- a/functions/package.json
+++ b/functions/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "algolia-firestore-indexing",
+  "name": "firestore-algolia-search",
   "description": "Index Cloud Firestore collection to Algolia",
   "scripts": {
     "build": "npm run clean && npm run compile",
     "clean": "rimraf lib",
     "compile": "tsc",
-    "lint": "eslint \"src/**/*\"",
+    "import": "ts-node src/import/index.ts",
+    "lint": "pretty-quick --staged && lint-staged",
     "prepare": "npm run build"
+  },
+  "hooks": {
+    "pre-commit": "npm run lint"
   },
   "main": "lib/index.js",
   "dependencies": {
     "algoliasearch": "^4.8.6",
-    "firebase-admin": "^8.13.0",
-    "firebase-functions": "^3.12.0"
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.13.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.6.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
     "typescript": "^3.8.0"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": ">=15.0.0"
+  }
 }
