--- a/functions/package.json
+++ b/functions/package.json
@@ -14,21 +14,29 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@algolia/client-common": "^4.8.6",
+    "@algolia/transporter": "^4.8.6",
     "algoliasearch": "^4.8.6",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.13.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
+    "@types/js-yaml": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "firebase-functions-test": "^0.2.3",
+    "jest": "^26.6.3",
+    "js-yaml": "^3.14.1",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^3.8.0"
   },
