--- a/functions/package.json
+++ b/functions/package.json
@@ -2,12 +2,13 @@
   "name": "firestore-algolia-search",
   "description": "Index Cloud Firestore collection to Algolia",
   "scripts": {
-    "build": "npm run clean && npm run compile",
+    "build": "npm run clean && npm test && npm run compile",
     "clean": "rimraf lib",
     "compile": "tsc",
     "import": "ts-node src/import/index.ts",
     "lint": "pretty-quick --staged && lint-staged",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "jest"
   },
   "hooks": {
     "pre-commit": "npm run lint"
@@ -22,7 +23,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^24.0.18",
     "@types/js-yaml": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -30,13 +31,15 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "faker": "^5.1.0",
     "firebase-functions-test": "^0.2.3",
     "jest": "^26.6.3",
     "js-yaml": "^3.14.1",
+    "mocked-env": "^1.3.2",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.4",
+    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "typescript": "^3.8.0"
   },
