--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "lib": ["esnext.asynciterable"],
     "outDir": "lib",
+    "types": ["node", "jest"],
     "target": "es2018",
-    "resolveJsonModule": true
+    "module": "commonjs",
+    "noImplicitReturns": true,
+    "sourceMap": false
   },
+  "files": ["./__tests__/test.types.d.ts"],
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
