chore(packaging): version script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "license": "Apache-2.0",
   "scripts": {
-    "emulator:ext:start": "firebase ext:dev:emulators:start --import=data --test-params=test-params.env"
+    "emulator:ext:start": "firebase ext:dev:emulators:start --import=data --test-params=test-params.env",
+    "release": "./scripts/version.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
