--- a/extension.yaml
+++ b/extension.yaml
@@ -1,9 +1,14 @@
 # Learn detailed information about the fields of an extension.yaml file in the docs:
 # https://firebase.google.com/docs/extensions/alpha/ref-extension-yaml
 
-name: firestore-algolia-search  # Identifier for your extension
-version: 0.1.3  # Follow semver versioning
-specVersion: v1beta  # Version of the Firebase Extensions specification
+# Identifier for your extension
+name: firestore-algolia-search
+
+# Follow semver versioning
+version: 0.1.3
+
+# Version of the Firebase Extensions specification
+specVersion: v1beta
 
 # Friendly display name for your extension (~3-5 words)
 displayName: Search with Algolia
