feat: add Timestamp, Reference, and GeoPoint process
- add code to process Reference field type.  display reference path at this time.
- add code to process timestamp.  render full date format , e.g. 2021-05-24T06:31:32.829Z
- add code to process GeoPoint to Algolia specific format.

--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "import": "ts-node src/import/index.ts",
     "lint": "pretty-quick --staged && lint-staged",
     "prepare": "npm run build",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "bin": "cli.js",
   "hooks": {
