--- a/functions/package.json
+++ b/functions/package.json
@@ -21,7 +21,8 @@
     "@algolia/transporter": "^4.8.6",
     "algoliasearch": "^4.8.6",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
