--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "license": "Apache-2.0",
   "scripts": {
     "emulator:ext:start": "firebase ext:dev:emulators:start --import=data --test-params=test-params.env --project=algolia",
-    "release": "./scripts/version.sh"
+    "release": "standard-version",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "husky": "^5.1.3"
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "husky": "^5.2.0",
+    "standard-version": "^9.3.1",
+    "yaml": "^1.10.2",
+    "detect-indent": "^6.0.0",
+    "stringify-package": "^1.0.1",
+    "detect-newline": "^3.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
