--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,8 @@
     "algoliasearch": "^4.13.0",
     "firebase-admin": "^9.12.0",
     "firebase-functions": "^3.21.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
@@ -40,7 +41,6 @@
     "mocked-env": "^1.3.5",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
-    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
