--- a/functions/package.json
+++ b/functions/package.json
@@ -23,9 +23,7 @@
     "firebase-admin": "^9.12.0",
     "firebase-functions": "^3.21.0",
     "node-fetch": "^2.6.7",
-    "rimraf": "^3.0.2"
-  },
-  "devDependencies": {
+    "rimraf": "^3.0.2",
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.5.0",
     "@types/js-yaml": "^4.0.5",
