--- a/functions/package.json
+++ b/functions/package.json
@@ -19,31 +19,36 @@
   "dependencies": {
     "@algolia/client-common": "^4.13.0",
     "@algolia/transporter": "^4.13.0",
-    "algoliasearch": "^4.13.0",
-    "firebase-admin": "^9.12.0",
-    "firebase-functions": "^3.21.0",
-    "node-fetch": "^2.6.7",
-    "rimraf": "^3.0.2",
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.5.0",
     "@types/js-yaml": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
+    "algoliasearch": "^4.13.0",
+    "commander": "^9.4.0",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "firebase-admin": "^9.12.0",
+    "firebase-functions": "^3.21.0",
     "firebase-functions-test": "^2.0.1",
+    "inquirer": "^6.5.2",
     "jest": "^27.5.1",
     "js-yaml": "^4.1.0",
     "mocked-env": "^1.3.5",
+    "node-fetch": "^2.6.7",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
   "engines": {
     "node": ">=15.0.0"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^6.5.0"
   }
 }
