--- a/functions/package.json
+++ b/functions/package.json
@@ -6,12 +6,12 @@
     "build": "npm run clean && npm test && npm run compile",
     "clean": "rimraf lib",
     "compile": "tsc",
-    "import": "node cli.js",
+    "import": "node lib/import/index.js",
     "lint": "pretty-quick --staged && lint-staged",
     "prepare": "npm run build",
     "test": "jest --coverage"
   },
-  "bin": "cli.js",
+  "bin": "lib/import/index.js",
   "hooks": {
     "pre-commit": "npm run lint"
   },
