--- a/functions/package.json
+++ b/functions/package.json
@@ -20,9 +20,11 @@
     "@algolia/client-common": "^4.13.0",
     "@algolia/transporter": "^4.13.0",
     "algoliasearch": "^4.13.0",
-    "firebase-admin": "^9.12.0",
-    "firebase-functions": "^3.21.0",
-    "node-fetch": "^2.6.7",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^3.24.1",
+    "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
     "rimraf": "^3.0.2",
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.5.0",
