--- a/functions/package.json
+++ b/functions/package.json
@@ -25,25 +25,25 @@
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
-    "rimraf": "^3.0.2",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/jest": "^27.5.0",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^27.5.1",
     "@types/js-yaml": "^4.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "firebase-functions-test": "^2.0.1",
     "jest": "^27.5.1",
-    "js-yaml": "^4.1.0",
+    "jest-mock": "^29.3.1",
     "mocked-env": "^1.3.5",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.1",
     "pretty-quick": "^3.1.3",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=15.0.0"
