--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
-    "lib": ["esnext.asynciterable"],
-    "outDir": "lib",
-    "types": ["node", "jest"],
-    "target": "es2018",
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "module": "commonjs",
     "noImplicitReturns": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "outDir": "lib"
   },
   "compileOnSave": true,
   "include": ["src"],
