--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020"
+    ],
     "module": "commonjs",
     "noImplicitReturns": true,
     "sourceMap": false,
     "outDir": "lib"
   },
   "compileOnSave": true,
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
