--- a/functions/package.json
+++ b/functions/package.json
@@ -22,7 +22,9 @@
     "algoliasearch": "^4.14.3",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1 ",
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^2.6.9",
+    "rimraf": "^4.1.2",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.0",
@@ -40,10 +42,8 @@
     "mocked-env": "^1.3.5",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
-    "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "ts-node": "^10.9.1"
   },
   "engines": {
     "node": ">=16"
