--- a/functions/package.json
+++ b/functions/package.json
@@ -24,9 +24,7 @@
     "firebase-functions": "^4.2.1 ",
     "node-fetch": "^2.6.9",
     "rimraf": "^4.1.2",
-    "typescript": "^4.9.5"
-  },
-  "devDependencies": {
+    "typescript": "^4.9.5",
     "@babel/preset-typescript": "^7.21.0",
     "@types/jest": "^27.5.1",
     "@types/js-yaml": "^4.0.5",
