--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,18 @@
       ]
     }
   ],
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true,
+      "port": 4000
+    }
+  },
   "extensions": {
     "firestore-algolia-search": "."
   }
