fix: removing cli.js and algolia-firestore func ref

--- a/firebase.json
+++ b/firebase.json
@@ -2,11 +2,7 @@
   "functions": [
     {
       "source": "functions",
-      "codebase": "default"
-    },
-    {
-      "source": "algolia-firestore",
-      "codebase": "algolia-firestore",
+      "codebase": "default",
       "ignore": [
         "node_modules",
         ".git",
