--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,6 @@
     "prepare": "npm run build",
     "test": "jest --coverage"
   },
-  "bin": "cli.js",
   "hooks": {
     "pre-commit": "npm run lint"
   },
@@ -43,6 +42,6 @@
     "ts-node": "^10.9.1"
   },
   "engines": {
-    "node": ">=16"
+    "node": "16"
   }
 }
