--- a/functions/package.json
+++ b/functions/package.json
@@ -17,29 +17,29 @@
   "dependencies": {
     "@algolia/client-common": "^4.14.3",
     "@algolia/transporter": "^4.14.3",
-    "algoliasearch": "^4.14.3",
-    "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.1",
-    "node-fetch": "^2.6.9",
-    "rimraf": "^4.1.2",
-    "typescript": "^4.9.5",
     "@babel/preset-typescript": "^7.21.0",
     "@types/jest": "^27.5.1",
     "@types/js-yaml": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "algoliasearch": "^4.14.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.3.1",
     "firebase-functions-test": "^3.0.0",
     "jest": "^29.4.0",
     "jest-mock": "^29.4.3",
     "mocked-env": "^1.3.5",
+    "node-fetch": "^2.6.9",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
+    "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": "16"
