--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firestore-algolia-search",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Index Cloud Firestore collection to Algolia",
   "scripts": {
     "build": "npm run clean && npm test && npm run compile",
@@ -32,6 +32,7 @@
     "firebase-functions-test": "^3.0.0",
     "jest": "^29.4.0",
     "jest-mock": "^29.4.3",
+    "lint-staged": "^13.2.2",
     "mocked-env": "^1.3.5",
     "node-fetch": "^2.6.9",
     "prettier": "^2.8.4",
