--- a/firebase.json
+++ b/firebase.json
@@ -28,6 +28,7 @@
     }
   },
   "extensions": {
-    "firestore-algolia-search": "."
+    "firestore-algolia-search": ".",
+    "firestore-algolia-search-n6u5": "."
   }
 }
