fix: add subcollection support for full indexing

--- a/firebase.json
+++ b/firebase.json
@@ -28,6 +28,8 @@
     }
   },
   "extensions": {
-    "firestore-algolia-search-lygz": "."
+    "firestore-algolia-search-lygz": ".",
+    "firestore-algolia-search": ".",
+    "firestore-algolia-search-9h04": "."
   }
 }
