--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firestore-algolia-search",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "",
   "license": "Apache-2.0",
   "scripts": {
@@ -9,14 +9,14 @@
     "prepare": "husky install && cd functions && npm install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.4",
+    "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
+    "detect-indent": "^7.0.1",
+    "detect-newline": "^4.0.1",
     "husky": "^7.0.4",
-    "standard-version": "^9.3.2",
-    "yaml": "^2.0.1",
-    "detect-indent": "^7.0.0",
+    "standard-version": "^9.5.0",
     "stringify-package": "^1.0.1",
-    "detect-newline": "^4.0.0"
+    "yaml": "^2.3.2"
   },
   "standard-version": {
     "scripts": {
