--- a/functions/package.json
+++ b/functions/package.json
@@ -15,24 +15,24 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@algolia/client-common": "^4.17.1",
-    "@algolia/transporter": "^4.17.1",
-    "@babel/preset-typescript": "^7.21.5",
+    "@algolia/client-common": "^4.20.0",
+    "@algolia/transporter": "^4.20.0",
+    "@babel/preset-typescript": "^7.23.2",
     "@types/jest": "^27.5.2",
-    "@types/js-yaml": "^4.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "algoliasearch": "^4.17.1",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@types/js-yaml": "^4.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "algoliasearch": "^4.20.0",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.4.0",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.4.1",
     "firebase-functions-test": "^3.1.0",
-    "jest": "^29.5.0",
-    "jest-mock": "^29.5.0",
-    "lint-staged": "^13.2.2",
+    "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "lint-staged": "^13.3.0",
     "mocked-env": "^1.3.5",
     "node-fetch": "^2.6.11",
     "prettier": "^2.8.8",
@@ -42,7 +42,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
-  "engines": {
-    "node": "16"
+  "overrides": {
+    "@google-cloud/firestore": "^6.7.0"
   }
 }
