--- a/firebase.json
+++ b/firebase.json
@@ -29,6 +29,7 @@
   },
   "extensions": {
     "firestore-algolia-search": ".",
-    "firestore-algolia-search-s4eg": "."
+    "firestore-algolia-search-s4eg": ".",
+    "firestore-algolia-search-z5tb": "."
   }
 }
