--- a/firebase.json
+++ b/firebase.json
@@ -30,6 +30,7 @@
   "extensions": {
     "firestore-algolia-search": ".",
     "firestore-algolia-search-s4eg": ".",
-    "firestore-algolia-search-z5tb": "."
+    "firestore-algolia-search-z5tb": ".",
+    "firestore-algolia-search-lq9c": "."
   }
 }
