chore: add RC version to 1.2.1-rc.1

--- a/firebase.json
+++ b/firebase.json
@@ -31,6 +31,7 @@
     "firestore-algolia-search": ".",
     "firestore-algolia-search-s4eg": ".",
     "firestore-algolia-search-z5tb": ".",
-    "firestore-algolia-search-lq9c": "."
+    "firestore-algolia-search-lq9c": ".",
+    "firestore-algolia-search-2n5t": "."
   }
 }
