--- a/extension.yaml
+++ b/extension.yaml
@@ -5,7 +5,7 @@
 name: firestore-algolia-search
 
 # Follow semver versioning
-version: 1.2.0
+version: 1.2.1-rc.1
 
 # Version of the Firebase Extensions specification
 specVersion: v1beta
