Alt object ID Impl (#197)
- Add configuration input to allow users to set a firebase property as objectID in Algolia
- Update README to reflect changes
- Add logic to extract JS to use the alternative record id if it is set
- Add test for this change

--- a/firebase.json
+++ b/firebase.json
@@ -30,6 +30,8 @@
   "extensions": {
     "firestore-algolia-search": ".",
     "firestore-algolia-search-s4eg": ".",
-    "firestore-algolia-search-z5tb": "."
+    "firestore-algolia-search-z5tb": ".",
+    "firestore-algolia-search-lq9c": ".",
+    "firestore-algolia-search-2n5t": "."
   }
 }
