--- a/extension.yaml
+++ b/extension.yaml
@@ -62,7 +62,7 @@ roles:
 # Learn more in the docs: https://firebase.google.com/docs/extensions/alpha/ref-extension-yaml#resources-field
 resources:
   - name: executeIndexOperation
-    type: firebaseextensions.v1beta.v2function
+    type: firebaseextensions.v1beta.function
     description: >-
       Firestore document-triggered function that creates, updates, or deletes data in Algolia.
     properties: # LOCATION is a user-configured parameter value specified by the user
@@ -74,7 +74,7 @@ resources:
         resource: projects/${PROJECT_ID}/databases/${DATABASE_ID}/documents/${COLLECTION_PATH}/{documentID}
 
   - name: executeFullIndexOperation
-    type: firebaseextensions.v1beta.v2function
+    type: firebaseextensions.v1beta.function
     description: Loads all the data from your FireStore database into Algolia
     properties:
       location: ${param:LOCATION}
