--- a/extension.yaml
+++ b/extension.yaml
@@ -10,14 +10,7 @@ version: 1.2.9
 # Version of the Firebase Extensions specification
 specVersion: v1beta
 
-tags:
-  [
-    ai,
-    search,
-    semantic-search,
-    vector-search,
-    text-search
-  ]
+tags: [ai, search, semantic-search, vector-search, text-search]
 
 # Friendly display name for your extension (~3-5 words)
 displayName: Search Firestore with Algolia
@@ -26,7 +19,7 @@ displayName: Search Firestore with Algolia
 description: >-
   Enables full text search of your Cloud Firestore data with Algolia.
 
-license: Apache-2.0  # https://spdx.org/licenses/
+license: Apache-2.0 # https://spdx.org/licenses/
 
 author:
   authorName: Algolia
@@ -81,7 +74,7 @@ resources:
       runtime: nodejs22
       availableMemoryMb: 1024
       timeout: 540s
-      taskQueueTrigger: { }
+      taskQueueTrigger: {}
 
 # In the `params` field, set up your extension's user-configured parameters.
 # Learn more in the docs: https://firebase.google.com/docs/extensions/alpha/ref-extension-yaml#params-field
@@ -90,7 +83,7 @@ params:
     label: Database ID
     description: >
       Enter database that contains the collections that you want to monitor?
-    default: '(default)'
+    default: "(default)"
     example: test
     required: true
     immutable: true
@@ -99,7 +92,7 @@ params:
     label: Collection Path
     description: >
       What is the path to the Cloud Firestore collection where the extension should monitor for changes?
-    default: ''
+    default: ""
     example: store
     validationRegex: "^[^/]+(/[^/]+/[^/]+)*$"
     validationErrorMessage: Firestore collection paths must be an odd number of segments separated by slashes, e.g. "movies/{id}/actors".
@@ -112,8 +105,8 @@ params:
       This can be a comma separated list or left blank to index all fields.
       For performance reasons, [record size is limited](https://www.algolia.com/doc/guides/sending-and-managing-data/prepare-your-data/in-depth/index-and-records-size-and-usage-limitations/#record-size-limits).
       If you're receiving errors that your records are too large, refer to the [reducing record size documentation](https://www.algolia.com/doc/guides/sending-and-managing-data/prepare-your-data/how-to/reducing-object-size/).
-    default: ''
-    example: 'name,category,price,sales'
+    default: ""
+    example: "name,category,price,sales"
     required: false
 
   - param: FORCE_DATA_SYNC
@@ -145,7 +138,7 @@ params:
     description: >-
       This is the Algolia application you want to index your data to.
       You can find your credentials including application ID on your Algolia dashboard,
-      under the [API keys tab](https://www.algolia.com/api-keys).
+      under the [API keys tab](https://dashboard.algolia.com/account/api-keys).
     type: string
     required: true
 
